--- a/apitesting/pom.xml
+++ b/apitesting/pom.xml
@@ -14,6 +14,21 @@
     </properties>
 
     <dependencies>
+        <!-- JACKSON for json serialization -->
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+
+        <!-- testNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
